--- a/index.html
+++ b/index.html
@@ -45,16 +45,19 @@
 
     <div id="links">
       <a class="link" href="https://open.spotify.com/playlist/1pJK7qaJPBhgmdFwrn17wk?si=1e6ee73bcd1544a8" target="_blank">
-        <i class="fab fa-spotify">&nbsp;</i>Spotify Playlist
+        <i class="fab fa-spotify">&nbsp;</i>Spotify Playlist.
       </a>
       <a class="link" href="https://www.facebook.com/rappamelo" target="_blank">
-        <i class="fab fa-facebook">&nbsp;</i>Facebook
+        <i class="fab fa-facebook">&nbsp;</i>Facebook.
       </a>
       <a class="link" href="https://www.instagram.com/rappamelo" target="_blank">
-        <i class="fab fa-instagram">&nbsp;</i>Instagram
+        <i class="fab fa-instagram">&nbsp;</i>Instagram.
       </a>
       <a class="link" href="https://twitter.com/rappamelo" target="_blank">
-        <i class="fab fa-twitter">&nbsp;</i>Twitter
+        <i class="fab fa-twitter">&nbsp;</i>Twitter.
+      </a>
+            <a class="link" href="rappamelo@gmail.com" target="_blank">
+        <i class="fab fa-envelope">&nbsp;</i>email.
       </a>
     </div>
 
