--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <a class="link" href="https://twitter.com/rappamelo" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter.
       </a>
-            <a class="link" href="rappamelo@gmail.com" target="_blank">
-        <i class="fab fa-envelope">&nbsp;</i>email.
+            <a class="link" href="mailto:rappamelo@gmail.com" target="_blank">
+         <i class="fa-regular fa-envelope"></i>email.
       </a>
     </div>
 
