--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <i class="fab fa-twitter">&nbsp;</i>Twitter.
       </a>
             <a class="link" href="mailto:rappamelo@gmail.com" target="_blank">
-         <i class="fa-regular fa-envelope"></i>email.
+         Contact me. email.
       </a>
     </div>
 
